test2/envoy/envoy_local.json
{
  "node": {
    "id": "sidecar~127.0.0.1~~",
    "cluster": "local",
    "metadata": {

    }
  },
  "stats_config": {
    "use_all_default_tags": false,
    "stats_tags": [
      {
        "tag_name": "cluster_name",
        "regex": "^cluster\\.((.+?(\\..+?\\.svc\\.cluster\\.local)?)\\.)"
      },
      {
        "tag_name": "tcp_prefix",
        "regex": "^tcp\\.((.*?)\\.)\\w+?$"
      },
      {
        "tag_name": "response_code",
        "regex": "_rq(_(\\d{3}))$"
      },
      {
        "tag_name": "response_code_class",
        "regex": "_rq(_(\\dxx))$"
      },
      {
        "tag_name": "http_conn_manager_listener_prefix",
        "regex": "^listener(?=\\.).*?\\.http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
        "tag_name": "http_conn_manager_prefix",
        "regex": "^http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
        "tag_name": "listener_address",
        "regex": "^listener\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
        "tag_name": "mongo_prefix",
        "regex": "^mongo\\.(.+?)\\.(collection|cmd|cx_|op_|delays_|decoding_)(.*?)$"
      }
    ],
    "stats_matcher": {
      "inclusion_list": {
        "patterns": [{
          "prefix": "cluster_manager"
        },
          {
            "prefix": "listener_manager"
          },
          {
            "prefix": "http_mixer_filter"
          },
          {
            "prefix": "tcp_mixer_filter"
          },
          {
            "prefix": "server"
          },
          {
            "prefix": "cluster.xds-grpc"
          }
        ]
      }
    }
  },
  "admin": {
    "access_log_path": "/dev/null",
    "address": {
      "socket_address": {
        "address": "127.0.0.1",
        "port_value": 17000
      }
    }
  },
  "dynamic_resources": {
    "lds_config": {
      "ads": {}
    },
    "cds_config": {
      "ads": {}
    },
    "ads_config": {
      "api_type": "GRPC",
      "grpc_services": [
        {
          "envoy_grpc": {
            "cluster_name": "xds-grpc"
          }
        }
      ]
    }
  },
  "static_resources": {
    "listeners": [
      {
        "name": "legacy15003",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17003
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.tcp_proxy",
                "config": {
                  "deprecated_v1": true,
                  "value": {
                    "stat_prefix": "legacy15003",
                    "route_config": {
                      "routes": [
                        {
                          "cluster": "pilot_http"
                        }
                      ]
                    }
                  }
                }
              }
            ]
          }
        ]
      },
      {
        "name": "iptables",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17001
          }
        },
        "use_original_dst": {
            "value": true
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.tcp_proxy",
                "config": {
                  "stat_prefix": "iptables"
                }
              }
            ]
          }
        ],
        "listener_filters": [
          {
            "name": "envoy.listener.original_dst"
          }
        ]
      },
      {
        "name": "http_proxy",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17002
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "codec_type": "AUTO",
                  "stat_prefix": "http_proxy",
                  "http_filters": [
                    {"name": "envoy.router"
                    }
                  ],
                  "route_config": {

                  },
                  "http_protocol_options": {
                    "allow_absolute_url": true
                  }

                }
              }
            ]
          }
        ]
      },
      {
        "name": "grpc15011",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17011
          }
        },
        "filter_chains": [
          {
            "tls_context": {
              "common_tls_context": {
                "tls_certificates": [
                  {
                    "certificate_chain": {
                      "inline_string": "-----BEGIN CERTIFICATE-----\nMIIDTzCCAjegAwIBAgIQZX1drhMeXBTU+dhaKckP5TANBgkqhkiG9w0BAQsFADBZ\nMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTESMBAGA1UEBxMJU3Vu\nbnl2YWxlMQ4wDAYDVQQKEwVJc3RpbzERMA8GA1UEAxMISXN0aW8gQ0EwHhcNMTgw\nMzEwMDUwMDE2WhcNMTkwMzEwMDUwMDE2WjATMREwDwYDVQQKEwhKdWp1IG9yZzCC\nASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAMIuHhv/cBdge+gH0VXJDgCF\n7NE8byK/0DlrWn5leewWBFDF7PsVOcEzXUd7qsGKcJ8qrK4o2Qy+myL8TEFjL/8c\nfCimVCcjxNa1nc0A+oA9fQBS8AHhKS1aCbQ [...]
                    },
                    "private_key": {
                      "inline_string": "-----BEGIN RSA PRIVATE KEY-----\nMIIEowIBAAKCAQEAwi4eG/9wF2B76AfRVckOAIXs0TxvIr/QOWtafmV57BYEUMXs\n+xU5wTNdR3uqwYpwnyqsrijZDL6bIvxMQWMv/xx8KKZUJyPE1rWdzQD6gD19AFLw\nAeEpLVoJtAkiGmShgqp4uU/6pcOEZTxH8Sxg8oz+huKy3hufoxMg+xUM7h5vVsYt\n0KlKzAWmkW9PRifoifQIf+ysKqkkF3ZWnsjkqEPrkxId8TbvNxvd+IY0iDNfviLN\nl4HH0lG4a9NjePtXKMDidx+d4bWbsPCuI218VarjwdaiVdxBU7Y7SzZPMqQO3Fne\nk1S+aJ0wrlqv9D/soeXtsRAyFWOliJmhZMBBywIDAQABAoIBAF5znEW2HEnirqKQ\nmuyFXYA3pJeqM8zNTHWBmIT+yy1hEDx [...]
                    }
                  }
                ],
                "validation_context": {
                  "trusted_ca": {
                    "filename": "./security/samples/plugin_ca_certs/cert-chain.pem"
                  }
                }
              },
              "require_client_certificate": true
            },
            "filters": [
              {
                "name": "envoy.tcp_proxy",
                "config": {
                  "deprecated_v1": true,
                  "value": {
                    "stat_prefix": "grpc15011",
                    "route_config": {
                      "routes": [
                        {
                          "cluster": "pilot_grpc"
                        }
                      ]
                    }
                  }
                }
              }
            ]
          }
        ]
      },
      {
        "address": {
          "socket_address": {
            "protocol": "TCP",
            "address": "0.0.0.0",
            "port_value": 15090
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "codec_type": "AUTO",
                  "stat_prefix": "stats",
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "name": "backend",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/stats/prometheus"
                            },
                            "route": {
                              "cluster": "prometheus_stats"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": {
                    "name": "envoy.router"
                  }
                }
              }
            ]
          }
        ]
      }

    ],
    "clusters": [
      {
        "name": "prometheus_stats",
        "type": "STATIC",
        "connect_timeout": "0.250s",
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "protocol": "TCP",
              "address": "127.0.0.1",
              "port_value": 17000
            }
          }
        ]
      },
      {
        "name": "xds-grpc",
        "type": "STRICT_DNS",
        "connect_timeout": {
          "seconds": 5,
          "nanos": 0
        },
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 15010
            }
          }
        ],
        "circuit_breakers": {
          "thresholds": [
            {
              "priority": "DEFAULT",
              "max_connections": 100000,
              "max_pending_requests": 100000,
              "max_requests": 100000
            },
            {
              "priority": "HIGH",
              "max_connections": 100000,
              "max_pending_requests": 100000,
              "max_requests": 100000
            }
          ]
        },
        "upstream_connection_options": {
          "tcp_keepalive": {
            "keepalive_time": 300
          }
        },
        "http2_protocol_options": {}
      },
      {
        "name": "pilot_http",
        "type": "STRICT_DNS",
        "connect_timeout": {
          "seconds": 5,
          "nanos": 0
        },
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 17007
            }
          }
        ],
        "http2_protocol_options": {}
      },
      {
        "name": "pilot_grpc",
        "type": "STRICT_DNS",
        "connect_timeout": {
          "seconds": 5,
          "nanos": 0
        },
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 17010
            }
          }
        ]
      }
    ]
  }
}
